kubernetes/apps/kubeflow/tensorboard/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tensorboard
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
  hostnames:
    - kubeflow.goyangi.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /tensorboards
      backendRefs:
        - name: tensorboard
          port: 5000
